--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
   </head>
   <body>
     <h1>Cubaan git remote</h1>
+    <p>Ini adalah cubaan git remote</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nemo
+      voluptates obcaecati quam sint fugiat voluptatibus veniam delectus
+      perferendis sunt labore similique corrupti necessitatibus explicabo
+      laboriosam possimus aperiam, quasi a.
+    </p>
   </body>
 </html>
